<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>path_finder</name>
  <version>0.0.1</version>
  <description> The path_finder package </description>
  <author email="yehongkai@todo.todo">yehongkai</author>
  <!-- Past maintainer: -->
  <!-- <maintainer email="zhenpeng.ge@qq.com">Zhenpeng Ge</maintainer> -->
  <maintainer email="caesar1457@gmail.com">Zhiye Zhao</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>occ_grid</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>


  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>



